# AI-Schedule-Analysis-Solutions

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.bat  run.sh
.claude/: CLAUDE.md  settings.json
.claude/skills/: README.md
app/: __init__.py  __main__.py  config.py  errors.py  main.py
docs/: BUILD-PLAN.md  Build_State_Summary_Ed_1.1.docx
ollama/: Modelfile
scripts/: start.ps1  validate_against_msp.py
tests/: _utils.py  conftest.py  test_ai.py  test_ai_cui_gate.py  test_ai_halt_on_ollama_unavailable.py  test_ai_route.py  test_ai_sanitizer.py  test_app_factory.py  test_driving_path.py  test_e2e_m11_public_api.py  test_engine_calendar_math.py  test_engine_comparator.py  test_engine_comparator_integration.py  test_engine_constraints.py  test_engine_cpm.py  test_engine_delta.py  test_engine_driving_path.py  test_engine_driving_path_constraint_driven.py  test_engine_driving_path_cross_version.py  test_engine_driving_path_focus_exclusion.py  test_engine_driving_path_integration.py  test_engine_driving_path_render_acumen.py  test_engine_driving_path_ssi_example.py  test_engine_driving_path_true_multi_branch.py  test_engine_driving_path_types.py  test_engine_duration.py  test_engine_exceptions.py  test_engine_focus_point.py  test_engine_forensics.py  test_engine_golden.py  test_engine_no_minute_hour_fields_on_public_models.py  test_engine_options.py  test_engine_paths.py  test_engine_relations.py  test_engine_topology.py  test_engine_units.py  test_engine_units_format_days.py  test_engine_windowing.py  test_export.py  test_integration.py  (+39 more)
(+142 files in other folders)
