[project]
name = "ai-schedule-analysis-solutions"
version = "0.1.0"
description = "Local forensic CPM schedule analysis for Microsoft Project .mpp files."
requires-python = ">=3.13"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = ["archive", "docs"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
